--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,15 +8,16 @@ env:
   PRE_RELEASE_BRANCH: develop
   PYTHON_VERSION_PRE_COMMIT: 3.9
   PYTEST_ARGS: --verbose --exitfirst
+  BOT_ACCOUNT_NAME: hpcflow-actions
+  BOT_ACCOUNT_EMAIL: hpcflow-actions@users.noreply.github.com
 
 on:
   workflow_dispatch: # manual
   push:
-    branches-ignore:
-      ["${{ env.RELEASE_BRANCH }}", "${{ env.PRE_RELEASE_BRANCH }}"]
+    branches-ignore: [main, develop]
   pull_request:
     types: [opened, edited, synchronize]
-    branches: ["${{ env.RELEASE_BRANCH }}", "${{ env.PRE_RELEASE_BRANCH }}"]
+    branches: [main, develop]
 
 jobs:
   pre-commit:
@@ -32,8 +33,8 @@ jobs:
           ref: ${{ github.head_ref || github.ref }}
 
       - run: |
-          git config user.name hpcflow-actions
-          git config user.email hpcflow-actions@users.noreply.github.com
+          git config user.name $BOT_ACCOUNT_NAME
+          git config user.email $BOT_ACCOUNT_EMAIL
 
       - uses: actions/setup-python@v2
         with:
