--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,12 +12,12 @@ env:
   BOT_ACCOUNT_EMAIL: hpcflow-actions@users.noreply.github.com
 
 on:
-  workflow_dispatch: # manual
+  workflow_dispatch: # manual invocation
   push:
-    branches-ignore: [main, develop]
+    branches-ignore: [main, develop] # have to manually change these
   pull_request:
     types: [opened, edited, synchronize]
-    branches: [main, develop]
+    branches: [main, develop] # have to manually change these
 
 jobs:
   pre-commit:
@@ -35,6 +35,8 @@ jobs:
       - run: |
           git config user.name $BOT_ACCOUNT_NAME
           git config user.email $BOT_ACCOUNT_EMAIL
+          echo "git config user.name: $(git config user.name)"
+          echo "git config user.email: $(git config user.email)"
 
       - uses: actions/setup-python@v2
         with:
