--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,15 +2,20 @@ name: release
 concurrency: release
 
 env:
+  RELEASE_BRANCH: main
+  PRE_RELEASE_BRANCH: develop
   PYTHON_VERSION_BUMP: 3.9
   PYTHON_VERSION_BUILD_EXES: 3.9
   PYTHON_VERSION_RELEASE: 3.9
   PYTHON_VERSION_BUILD_DOCS: 3.9
   PYTHON_VERSION_UPDATE_WEB: 3.9
+  BOT_ACCOUNT_NAME: hpcflow-actions
+  BOT_ACCOUNT_EMAIL: hpcflow-actions@users.noreply.github.com
+  TOKEN_NAME: HPCFLOW_ACTIONS_TOKEN # as defined within the `secrets` context: PAT of user who has permission to bypass branch protection
 
 on:
   pull_request_target:
-    branches: [main, develop]
+    branches: [main, develop] # have to manually change these
     types: [closed]
 
 jobs:
@@ -35,11 +40,13 @@ jobs:
         with:
           fetch-depth: 0 # get all history and tags
           ref: ${{ github.event.pull_request.base.ref }}
-          token: ${{ secrets.HPCFLOW_ACTIONS_TOKEN }} # PAT of user who has permission to bypass branch protection
+          token: ${{ format('secrets.{}', env.TOKEN_NAME) }}
 
       - run: |
-          git config user.name hpcflow-actions
-          git config user.email hpcflow-actions@users.noreply.github.com
+          git config user.name $BOT_ACCOUNT_NAME
+          git config user.email $BOT_ACCOUNT_EMAIL
+          echo "git config user.name: $(git config user.name)"
+          echo "git config user.email: $(git config user.email)"
 
       - uses: actions/setup-python@v2
         with:
@@ -316,11 +323,13 @@ jobs:
         with:
           fetch-depth: 0 # get all history and tags
           ref: ${{ github.event.pull_request.base.ref }} # otherwise we get the ref when the workflow started (missing above commit)
-          token: ${{ secrets.HPCFLOW_ACTIONS_TOKEN }} # PAT of user who has permission to bypass branch protection
+          token: ${{ format('secrets.{}', env.TOKEN_NAME) }}
 
       - run: |
-          git config user.name hpcflow-actions
-          git config user.email hpcflow-actions@users.noreply.github.com
+          git config user.name $BOT_ACCOUNT_NAME
+          git config user.email $BOT_ACCOUNT_EMAIL
+          echo "git config user.name: $(git config user.name)"
+          echo "git config user.email: $(git config user.email)"
 
       - uses: actions/setup-python@v2
         with:
@@ -386,11 +395,13 @@ jobs:
       - uses: actions/checkout@v2
         with:
           repository: hpcflow/hpcflow.github.io
-          token: ${{ secrets.HPCFLOW_ACTIONS_TOKEN }} # hpcflow-actions user with push permission
+          token: ${{ format('secrets.{}', env.TOKEN_NAME) }}
 
       - run: |
-          git config user.name hpcflow-actions
-          git config user.email hpcflow-actions@users.noreply.github.com
+          git config user.name $BOT_ACCOUNT_NAME
+          git config user.email $BOT_ACCOUNT_EMAIL
+          echo "git config user.name: $(git config user.name)"
+          echo "git config user.email: $(git config user.email)"
 
       - name: Download documentation artifact
         uses: actions/download-artifact@v2
