--- a/.github/workflows/test.yml.in
+++ b/.github/workflows/test.yml.in
@@ -6,9 +6,7 @@ concurrency:
 env:
   RELEASE_BRANCH: main
   PRE_RELEASE_BRANCH: develop
-  PYTHON_VERSION_PRE_COMMIT: 3.9  
-  BOT_ACCOUNT_NAME: hpcflow-actions
-  BOT_ACCOUNT_EMAIL: hpcflow-actions@users.noreply.github.com
+  PYTHON_VERSION_PRE_COMMIT: 3.9
 
 on:
   workflow_dispatch: # manual invocation
@@ -32,10 +30,8 @@ jobs:
           ref: {% raw %}${{ github.head_ref || github.ref }}{% endraw %}
 
       - run: |
-          git config user.name $BOT_ACCOUNT_NAME
-          git config user.email $BOT_ACCOUNT_EMAIL
-          echo "git config user.name: $(git config user.name)"
-          echo "git config user.email: $(git config user.email)"
+          git config user.name {{ bot_account_name }}
+          git config user.email {{ bot_account_email }}
 
       - uses: actions/setup-python@v2
         with:
@@ -46,7 +42,7 @@ jobs:
         # running twice:
         run: |
           pip install pre-commit
-          pre-commit install 
+          pre-commit install
           export SKIP=no-commit-to-branch
           pre-commit run --all-files || pre-commit run --all-files
 
