add variable for executable name/package

--- a/.github/workflows/build-exes.yml.in
+++ b/.github/workflows/build-exes.yml.in
@@ -43,7 +43,9 @@ jobs:
         run: poetry config virtualenvs.in-project true
 
       - name: Install dependencies
-        run: poetry install
+        run: |
+          poetry install --no-dev
+          poetry run pip install pyinstaller
 
       - name: Get exectuable version name
         run: |
@@ -52,18 +54,18 @@ jobs:
           echo "vers=$vers" >> $GITHUB_ENV
 
       - name: Build with pyinstaller for {% raw %}${{matrix.executable_os}}{% endraw %}
-        run: {% raw %}poetry run pyinstaller hpcflow/cli.py --name=hpcflow-${{ env.vers }} --onefile{% endraw %}
+        run: poetry run pyinstaller {{ pyinstaller_package }} --name={{ executable_name }}-{% raw %}${{ env.vers }}{% endraw %} --onefile
 
       - name: Rename executable for {% raw %}${{matrix.executable_os}}{% endraw %}
-        run: {% raw %}mv dist/hpcflow-${{ env.vers }}${{ matrix.executable_ext }} dist/hpcflow-${{ env.vers }}-${{ matrix.executable_os }}${{ matrix.executable_ext }}{% endraw %}
+        run: mv dist/{{ executable_name }}-{% raw %}${{ env.vers}}${{ matrix.executable_ext }}{% endraw %} dist/{{ executable_name }}-{% raw %}${{ env.vers}}-${{ matrix.executable_os }}${{ matrix.executable_ext }}{% endraw %}
 
       - uses: actions/upload-artifact@v2
         with:
-          name: {% raw %}hpcflow-${{ env.vers }}-${{ matrix.executable_os }}${{ matrix.executable_ext }}{% endraw %}
-          path: {% raw %}dist/hpcflow-${{ env.vers }}-${{ matrix.executable_os }}${{ matrix.executable_ext }}{% endraw %}
+          name: {{ executable_name }}-{% raw %}${{ env.vers}}-${{ matrix.executable_os }}${{ matrix.executable_ext }}{% endraw %}
+          path: dist/{{ executable_name }}-{% raw %}${{ env.vers}}-${{ matrix.executable_os }}${{ matrix.executable_ext }}{% endraw %}
 
       - name: Basic executable test
-        run: {% raw %}dist/hpcflow-${{ env.vers }}-${{ matrix.executable_os }}${{ matrix.executable_ext }} --version{% endraw %}
+        run: dist/{{ executable_name }}-{% raw %}${{ env.vers}}-${{ matrix.executable_os }}${{ matrix.executable_ext }}{% endraw %} --version
 
   build-executables-linux:
     runs-on: ubuntu-latest
@@ -85,7 +87,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          poetry install
+          poetry install --no-dev
+          poetry run pip install pyinstaller
 
       - name: Get exectuable version name
         run: |
@@ -94,13 +97,13 @@ jobs:
           echo "vers is: $vers"
           echo "vers=$vers" >> $GITHUB_ENV
 
-      - name: {% raw %}Build with pyinstaller for ${{matrix.executable_os}}{% endraw %}
-        run: {% raw %}poetry run pyinstaller hpcflow/cli.py --name=hpcflow-${{ env.vers }}-linux --onefile{% endraw %}
+      - name: Build with pyinstaller for CentOS
+        run: poetry run pyinstaller {{ pyinstaller_package }} --name={{ executable_name }}-{% raw %}${{ env.vers }}{% endraw %}-linux --onefile
 
       - uses: actions/upload-artifact@v2
         with:
-          name: {% raw %}hpcflow-${{ env.vers }}-linux{% endraw %}
-          path: {% raw %}dist/hpcflow-${{ env.vers }}-linux{% endraw %}
+          name: {{ executable_name }}-{% raw %}${{ env.vers }}{% endraw %}-linux
+          path: {% raw %}dist/{{ executable_name }}-{% raw %}${{ env.vers }}{% endraw %}-linux
 
       - name: Basic executable test
-        run: {% raw %}dist/hpcflow-${{ env.vers }}-linux --version{% endraw %}
+        run: dist/{{ executable_name }}-{% raw %}${{ env.vers}}{% endraw %}-linux --version
