--- a/.github/workflows/release.yml.in
+++ b/.github/workflows/release.yml.in
@@ -180,21 +180,23 @@ jobs:
         run: poetry config virtualenvs.in-project true
 
       - name: Install dependencies
-        run: poetry install
+        run: |
+          poetry install --no-dev
+          poetry run pip install pyinstaller
 
       - name: Build with pyinstaller for {% raw %}${{matrix.executable_os}}{% endraw %}
-        run: {% raw %}poetry run pyinstaller hpcflow/cli.py --name=hpcflow-${{ needs.bump-version.outputs.new_tag_name }} --onefile{% endraw %}
+        run: poetry run pyinstaller {{ pyinstaller_package }} --name={{ executable_name }}-{% raw %}${{ needs.bump-version.outputs.new_tag_name }}{% endraw %} --onefile
 
       - name: Rename executable for {% raw %}${{matrix.executable_os}}{% endraw %}
-        run: {% raw %}mv dist/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}${{ matrix.executable_ext }} dist/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-${{ matrix.executable_os }}${{ matrix.executable_ext }}{% endraw %}
+        run: mv dist/{{ executable_name }}-{% raw %}${{ needs.bump-version.outputs.new_tag_name }}${{ matrix.executable_ext }}{% endraw %} dist/{{ executable_name }}-{% raw %}${{ needs.bump-version.outputs.new_tag_name }}-${{ matix.executable_os }}${{ matrix.executable_ext }}{% endraw %}
 
       - uses: actions/upload-artifact@v2
         with:
-          name: {% raw %}hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-${{ matrix.executable_os }}${{ matrix.executable_ext }}{% endraw %}
-          path: {% raw %}dist/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-${{ matrix.executable_os }}${{ matrix.executable_ext }}{% endraw %}
+          name: {{ executable_name }}-{% raw %}${{ needs.bump-version.outputs.new_tag_name }}-${{ matix.executable_os }}${{ matrix.executable_ext }}{% endraw %}
+          path: dist/{{ executable_name }}-{% raw %}${{ needs.bump-version.outputs.new_tag_name }}-${{ matix.executable_os }}${{ matrix.executable_ext }}{% endraw %}
 
       - name: Basic executable test
-        run: {% raw %}dist/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-${{ matrix.executable_os }}${{ matrix.executable_ext }} --version{% endraw %}
+        run: dist/{{ executable_name }}-{% raw %}${{ needs.bump-version.outputs.new_tag_name }}-${{ matix.executable_os }}${{ matrix.executable_ext }}{% endraw %} --version
 
   build-executables-linux:
     runs-on: ubuntu-latest
@@ -217,18 +219,19 @@ jobs:
 
       - name: Install dependencies
         run: |
-          poetry install
+          poetry install --no-dev
+          poetry run pip install pyinstaller
 
-      - name: {% raw %}Build with pyinstaller for ${{matrix.executable_os}}{% endraw %}
-        run: {% raw %}poetry run pyinstaller hpcflow/cli.py --name=hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-linux --onefile{% endraw %}
+      - name: Build with pyinstaller for CentOS
+        run: poetry run pyinstaller {{ pyinstaller_package }} --name={{ executable_name }}-{% raw %}${{ needs.bump-version.outputs.new_tag_name }}{% endraw %}-linux --onefile
 
       - uses: actions/upload-artifact@v2
         with:
-          name: {% raw %}hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-linux{% endraw %}
-          path: {% raw %}dist/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-linux{% endraw %}
+          name: {{ executable_name }}-{% raw %}${{ needs.bump-version.outputs.new_tag_name }}{% endraw %}-linux
+          path: dist/{{ executable_name }}-{% raw %}${{ needs.bump-version.outputs.new_tag_name }}{% endraw %}-linux
 
       - name: Basic executable test
-        run: {% raw %}dist/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-linux --version{% endraw %}
+        run: dist/{{ executable_name }}-{% raw %}${{ needs.bump-version.outputs.new_tag_name }}{% endraw %}-linux --version
 
   release-github-PyPI:
     needs: [bump-version, build-executables, build-executables-linux]
