--- a/.github/workflows/release.yml.in
+++ b/.github/workflows/release.yml.in
@@ -188,15 +188,15 @@ jobs:
         run: poetry run pyinstaller {{ pyinstaller_package }} --name={{ executable_name }}-{% raw %}${{ needs.bump-version.outputs.new_tag_name }}{% endraw %} --onefile
 
       - name: Rename executable for {% raw %}${{matrix.executable_os}}{% endraw %}
-        run: mv dist/{{ executable_name }}-{% raw %}${{ needs.bump-version.outputs.new_tag_name }}${{ matrix.executable_ext }}{% endraw %} dist/{{ executable_name }}-{% raw %}${{ needs.bump-version.outputs.new_tag_name }}-${{ matix.executable_os }}${{ matrix.executable_ext }}{% endraw %}
+        run: mv dist/{{ executable_name }}-{% raw %}${{ needs.bump-version.outputs.new_tag_name }}${{ matrix.executable_ext }}{% endraw %} dist/{{ executable_name }}-{% raw %}${{ needs.bump-version.outputs.new_tag_name }}-${{ matrix.executable_os }}${{ matrix.executable_ext }}{% endraw %}
 
       - uses: actions/upload-artifact@v2
         with:
-          name: {{ executable_name }}-{% raw %}${{ needs.bump-version.outputs.new_tag_name }}-${{ matix.executable_os }}${{ matrix.executable_ext }}{% endraw %}
-          path: dist/{{ executable_name }}-{% raw %}${{ needs.bump-version.outputs.new_tag_name }}-${{ matix.executable_os }}${{ matrix.executable_ext }}{% endraw %}
+          name: {{ executable_name }}-{% raw %}${{ needs.bump-version.outputs.new_tag_name }}-${{ matrix.executable_os }}${{ matrix.executable_ext }}{% endraw %}
+          path: dist/{{ executable_name }}-{% raw %}${{ needs.bump-version.outputs.new_tag_name }}-${{ matrix.executable_os }}${{ matrix.executable_ext }}{% endraw %}
 
       - name: Basic executable test
-        run: dist/{{ executable_name }}-{% raw %}${{ needs.bump-version.outputs.new_tag_name }}-${{ matix.executable_os }}${{ matrix.executable_ext }}{% endraw %} --version
+        run: dist/{{ executable_name }}-{% raw %}${{ needs.bump-version.outputs.new_tag_name }}-${{ matrix.executable_os }}${{ matrix.executable_ext }}{% endraw %} --version
 
   build-executables-linux:
     runs-on: ubuntu-latest
