--- a/.github/workflows/test.yml.in
+++ b/.github/workflows/test.yml.in
@@ -23,7 +23,7 @@ jobs:
           # PAT of user who has permission to bypass branch
           # protection || or standard GITHUB_TOKEN if running on an external fork (won't
           # be able to commit fixes):
-          token: {{ '${{' }} secrets.{{ token_name }} {{ '}}' }}
+          token: {{ '${{' }} secrets.{{ token_name }} {{ ' || secrets.GITHUB_TOKEN }}' }}
           # checkout PR source branch (head_ref) if event is pull_request:
           ref: {% raw %}${{ github.head_ref || github.ref }}{% endraw %}
 
