--- a/.github/workflows/release.yml.in
+++ b/.github/workflows/release.yml.in
@@ -322,7 +322,7 @@ jobs:
           out_yaml = ''
           for i in ['win.exe', 'macOS', 'linux']:
             exe_name = '{{ executable_name }}-{% raw %}${{ needs.bump-version.outputs.new_tag_name }}{% endraw %}-' + i
-            url = 'https://github.com/{{ org }}/{{ repo }}/releases/download/{% raw %}${{ needs.bump-version.outputs.new_tag_name }}{% endraw %}' + exe_name
+            url = 'https://github.com/{{ org }}/{{ repo }}/releases/download/{% raw %}${{ needs.bump-version.outputs.new_tag_name }}{% endraw %}/' + exe_name
             out_yaml += exe_name + ': ' + url + '\n'
           print(out_yaml)
           ")
