--- a/.github/workflows/release.yml.in
+++ b/.github/workflows/release.yml.in
@@ -3,7 +3,7 @@ concurrency: release
 
 env:
   PYTHON_VERSION_BUMP: 3.9
-  PYTHON_VERSION_BUILD_EXES: 3.9
+  PYTHON_VERSION_BUILD_EXES: "3.10"
   PYTHON_VERSION_RELEASE: 3.9
   PYTHON_VERSION_BUILD_DOCS: 3.9
   PYTHON_VERSION_UPDATE_WEB: 3.9
@@ -149,12 +149,12 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [windows-2019, macos-10.15]
+        os: [windows-2019, macos-11]
         include:
           - os: windows-2019
             executable_ext: .exe
             executable_os: win
-          - os: macos-10.15
+          - os: macos-11
             executable_ext: ""
             executable_os: macOS
 
