fix: issue with git and perms

--- a/.github/workflows/release.yml.in
+++ b/.github/workflows/release.yml.in
@@ -249,6 +249,11 @@ jobs:
         with:
           ref: {% raw %}${{ github.event.pull_request.base.ref }}{% endraw %} # otherwise we get the ref when the workflow started (missing above commit)
 
+      - name: Set ownership
+        run: |
+          # this is to fix GIT not liking owner of the checkout dir
+          chown -R $(id -u):$(id -g) $PWD
+
       - name: Configure poetry
         run: poetry config virtualenvs.in-project true
 
