build: previous fixes

--- a/.github/workflows/test.yml.in
+++ b/.github/workflows/test.yml.in
@@ -18,7 +18,7 @@ jobs:
   pre-commit:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           # PAT of user who has permission to bypass branch
           # protection || or standard GITHUB_TOKEN if running on an external fork (won't
@@ -26,6 +26,7 @@ jobs:
           token: {{ '${{' }} secrets.{{ token_name }} {{ '|| secrets.GITHUB_TOKEN }}' }}
           # checkout PR source branch (head_ref) if event is pull_request:
           ref: {% raw %}${{ github.head_ref || github.ref }}{% endraw %}
+          repository: ${{ github.event.pull_request.head.repo.full_name }}
 
       - run: |
           git config user.name {{ bot_account_name }}
@@ -91,7 +92,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          poetry install
+          poetry install --without dev,pyinstaller
 
       - name: Run tests
         run: |
@@ -123,7 +124,7 @@ jobs:
           key: {% raw %}venv-CentOS-test-${{ hashFiles('**/poetry.lock') }}{% endraw %}
 
       - name: Install dependencies
-        run: poetry install
+        run: poetry install --without dev,pyinstaller
 
       - name: Run tests
         run: |
